# http-sense

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  dev.sqlite  dev_dummy.sqlite  rust-toolchain.toml  test.sqlite
.github/: CODEOWNERS
frontend/: README.md  package-lock.json  package.json  svelte.config.js
frontend/src/lib/: utils.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  Request.svelte  models.ts
frontend/src/routes/hello/: +page.svelte
frontend/src/routes/hello/bye/: +page.svelte
frontend/src/routes/random/[slug]/: +page.svelte  +page.ts
http-sense-client/: package-lock.json  package.json
http-sense-client/public/: index.html  manifest.json
http-sense-client/src/: index.js
http-sense-client/src/components/App/: index.js
http-sense-client/src/components/Chart/: index.js
http-sense-client/src/components/Dashboard/: index.js
http-sense-client/src/components/Drawer/: index.js
http-sense-client/src/components/Home/: index.js
http-sense-client/src/components/Navbar/: index.js
http-sense-client/src/components/TableVeiw/: index.js
http-sense-client/src/store/: authContext.js  networkContext.js
http-sense-client/src/styles/: globals.css  theme.js
http-sense-client/src/utils/: index.js
sqls/: init.sql
src/: api_server.rs  axum_utils.rs  bytes_util.rs  cli.rs  config.rs  db.rs  main.rs  model.rs  models.rs  prelude.rs  proxy_server.rs  serde_util.rs  socketio.rs  supabase.rs  supabase_auth.rs  ui_server.rs
src/models/: external_serialize.rs  request.rs  response.rs
