[package]
name = "http-sense"
version = "0.1.11-beta.2"
edition = "2021"
license = "MIT"
description = "HTTP Reverse Proxy with remote monitoring"
documentation = "https://github.com/http-sense/http-sense"
readme = "README.md"
homepage = "https://www.httpsense.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = { version = "0.6.1", features = ["ws"] }
axum-macros = "0.3.0"
directories = "4.0.1"
http = "0.2.8"
http-serde = "1.1.2"
hyper = "0.14.23"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
bytes = { version = "1", features = ["serde"] }
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "serde"] }
clap = { version = "4.0.29", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["gzip", "brotli", "deflate"] }
url = "2.3.1"
include_dir = "0.7.3"
infer = "0.11.0"
mime = "0.3.16"
mime_guess = "2.0.4"
chrono = { version = "0.4.23", features = ["serde"] }
postgrest = "1.3.2"
async-trait = "0.1.59"
rust_socketio = "0.4.0"
futures = "0.3.25"
go_true = "0.1.1"
rand = "0.8.5"
base64 = "0.20.0"
log = "0.4.17"
ansi_term = "0.12.1"
encoding_rs = "0.8.31"
tower-http = { version = "0.3.5", features = ["cors"] }
parking_lot = "0.12.1"

[dev-dependencies]
tempfile = "3.3.0"

[build-dependencies]
fs_extra = "1.2.0"
